# play-with-pytorch

./: LICENSE  README.md  pyproject.toml
notebook/: use_pretrained_model.ipynb
