[tool.poetry]
name = "play-with-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchaudio = "^0.8.1"
ipykernel = "^5.5.0"
matplotlib = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
